new commit 15 july

--- a/doctors admin/profile/patients-details.html
+++ b/doctors admin/profile/patients-details.html
@@ -148,7 +148,6 @@
             </div>
           </div>
         </div>
-
         <div class="tab-menu">
           <div class="exit_tab-menu">
             <svg
@@ -188,167 +187,99 @@
       <!-- main content -->
       <div class="main-content-container">
         <div class="main-content d-flex">
-          <!-- all-patients -->
-          <div class="all-patients-container w-80 p-5">
-            <div class="all-patients-head d-flex justify-content-between mb-5">
-              <div class="all-patients-header">All Patients</div>
-              <div class="dropdown mr-3">
-                <a
-                  class="btn btn-secondary dropdown-toggle"
-                  href="#"
-                  role="button"
-                  id="dropdownMenuLink"
-                  data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
+          <!-- avaliable doctors section -->
+          <div class="messages-doctors-section">
+            <div class="avaliable-doctors-container w-100 h-100">
+              <div class="avaliable-doctors_top p-5">
+                <div class="avaliable-doctors-header mb-3">Doctors</div>
+                <input type="text" />
+              </div>
+              <div class="patients-list-container">
+                <div class="patients-list">
+                  <div class="patients d-flex">
+                    <div class="patients-profile-img"></div>
+                    <div class="patients-info">
+                      <div class="doctors-info mb-4">
+                        <div class="name">Mabel Quins</div>
+                        <div class="blood-group">AB-</div>
+                        <div class="age">30</div>
+                        <div class="gender">female</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- message-tab section -->
+          <div class="message-tab-section">
+            <div
+              class="
+                message-tab-menu
+                d-flex
+                justify-content-between
+                align-items-center
+                p-3
+              "
+            >
+              <div class="tab-menu-profile d-flex align-items-center">
+                <div class="doctors-profile-img"></div>
+                <div class="doctors-info">
+                  <div class="name">Dr. Mabel Quins</div>
+                  <div class="active-status">Online</div>
+                </div>
+              </div>
+              <div class="tab-menu-options d-flex">
+                <a href="video-call.html"
+                  ><div class="video-call-btn mr-3">video-call</div></a
                 >
-                  All Patients
-                </a>
-
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">All Patients</a>
-                  <a class="dropdown-item" href="#">New </a>
-                  <a class="dropdown-item" href="#">Old</a>
-                </div>
+                <a href="voice-call.html"
+                  ><div class="voice-call-btn mr-3">voice-call</div></a
+                >
+                <div class="more-btn">more-btn</div>
               </div>
             </div>
-            <div class="patients-list d-flex justify-content-between mb-5">
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
+            <div class="message-tab-container">
+              <div class="message-tab p-4 justify-content-between">
+                <div class="chat-convo">
+                  <div class="recievers-chats-container w-48 mr-auto">
+                    <div class="recievers-chats br-3 p-4 mb-1">
+                      Lorem Ipsun est sit aliqua dolor
+                    </div>
+                    <div class="message-delivered-time text-right">6:20pm</div>
+                  </div>
+                  <div class="senders-chats-container w-48 ml-auto">
+                    <div class="senders-chats br-3 p-4 mb-1">
+                      Lorem Ipsun est sit aliqua dolor
+                    </div>
+                    <div class="message-delivered-time">6:20pm</div>
                   </div>
                 </div>
               </div>
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
-                  </div>
-                </div>
-              </div>
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="patients-list d-flex justify-content-between mb-5">
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
-                  </div>
-                </div>
-              </div>
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
-                  </div>
-                </div>
-              </div>
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="patients-list d-flex justify-content-between mb-5">
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
-                  </div>
-                </div>
-              </div>
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
-                  </div>
-                </div>
-              </div>
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="patients-list d-flex justify-content-between mb-5">
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
-                  </div>
-                </div>
-              </div>
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
-                  </div>
-                </div>
-              </div>
-              <div class="patients d-flex">
-                <div class="patients-profile-img"></div>
-                <div class="patients-info">
-                  <div class="doctors-info mb-4">
-                    <div class="name">Mabel Quins</div>
-                    <div class="blood-group">AB-</div>
-                    <div class="age">30</div>
-                    <div class="gender">female</div>
-                  </div>
+              <div
+                class="
+                  compose-message-container
+                  d-flex
+                  align-items-center
+                  justify-content-center
+                "
+              >
+                <div
+                  class="
+                    compose-message
+                    d-flex
+                    justify-content-between
+                    align-items-center
+                    w-80
+                  "
+                >
+                  <div class="emoji-btn">EM</div>
+                  <div class="add-attachment-btn">ATT</div>
+                  <input
+                    type="text"
+                    class="type-message border-none h-100 br-3 p-3"
+                  />
+                  <div class="send-message-btn">SND</div>
                 </div>
               </div>
             </div>
