medicationo and wallet pages on doctors admin done

--- a/doctors admin/medications/medications.html
+++ b/doctors admin/medications/medications.html
@@ -148,6 +148,7 @@
             </div>
           </div>
         </div>
+
         <div class="tab-menu">
           <div class="exit_tab-menu">
             <svg
@@ -200,159 +201,167 @@
                     <div class="patients-profile-img"></div>
                     <div class="patients-info mb-4">
                       <div class="name">Mabel Quins</div>
-                      <div class="blood-group">AB-</div>
-                      <div class="age">30</div>
-                      <div class="gender">female</div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <!-- patients-details-section -->
-          <div class="patients-details-section">
-            <div class="patients-profile-container w-70">
-              <div class="profile-container p-5 w-100 d-flex mb-4">
-                <div class="profile-img-container w-40 p-5">
-                  <div class="patients-profile-img"></div>
-                  <div class="patients-info">
-                    <div class="name">Jacob Jones</div>
-                    <div class="d-flex">
-                      <div class="sex-container">
-                        <div class="sex-head">sex</div>
-                        <div class="sex">Male</div>
-                      </div>
-                      <div class="age-container">
-                        <div class="age-head">age</div>
-                        <div class="age">30</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="personal-info w-60 p-5">
-                  <div class="d-flex justify-content-between mb-4">
-                    <div class="personal-info-header">Personal Info</div>
-                    <svg
-                      width="24"
-                      height="24"
-                      fill="none"
-                      class="custom-btn"
-                      data-toggle="modal"
-                      data-target="#personal-info-modal"
-                    >
-                      <defs />
-                      <path
-                        stroke="#2B2B2B"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="2"
-                        d="M12 20h9M17 4a2 2 0 113 3L7 19l-4 1 1-4L17 4z"
-                      />
-                    </svg>
-                  </div>
-                  <div class="d-flex justify-content-between mb-4">
-                    <div class="height-container d-flex">
-                      <div class="height-head mr-4">Height</div>
-                      <div class="height">143 cm</div>
-                    </div>
-                    <div class="marital-status-container d-flex">
-                      <div class="marital-status-head mr-4">Height</div>
-                      <div class="marital-status">143 cm</div>
-                    </div>
-                  </div>
-                  <div class="d-flex justify-content-between mb-4">
-                    <div class="weight-container d-flex">
-                      <div class="weight-head mr-4">Weight</div>
-                      <div class="weight">70 kg</div>
-                    </div>
-                    <div class="children-status-container d-flex">
-                      <div class="children-status-head mr-4">Children</div>
-                      <div class="children-status">2</div>
-                    </div>
-                  </div>
-                  <div class="d-flex justify-content-between">
-                    <div class="weight-container d-flex">
-                      <div class="weight-head mr-4">Blood Group</div>
-                      <div class="weight">AB-</div>
-                    </div>
-                  </div>
-                </div>
+          <!-- medications-description-section  -->
+          <div class="medications-list-section d-flex p-5">
+            <!-- <div class="go-back-btn custom-btn position-fixed">go back</div> -->
+            <div class="medications-list-container w-45 mt-5 mr-5">
+              <div class="medications-list-header mb-4">Medication</div>
+              <div class="medications p-3 mb-4">
+                <div class="medication-name">Amoxicillin (100mg)</div>
+                <div class="medication-type">Tablets</div>
+                <div class="dosage">2x Daily (Morning & Evening)</div>
+                <div class="more-instructions">Take with food</div>
               </div>
-              <div class="allergies p-5">
-                <div class="d-flex justify-content-between mb-4">
-                  <div class="allergies-header">Allergies</div>
-                  <svg
-                    width="24"
-                    height="24"
-                    fill="none"
-                    class="custom-btn"
-                    data-toggle="modal"
-                    data-target="#allergies-modal"
-                  >
-                    <defs />
-                    <path
-                      stroke="#2B2B2B"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M12 20h9M17 4a2 2 0 113 3L7 19l-4 1 1-4L17 4z"
-                    />
-                  </svg>
-                </div>
-                <p class="allergies-text mb-5">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                  amet sint. Velit officia consequat duis enim velit mollit.
-                  Exercitation veniam consequat sunt nostrud amet.`
-                </p>
-                <p class="allergies-text">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                  amet sint. Velit officia consequat duis enim velit mollit.
-                  Exercitation veniam consequat sunt nostrud amet.`
-                </p>
+              <div class="medications p-3 mb-4">
+                <div class="medication-name">Amoxicillin (100mg)</div>
+                <div class="medication-type">Tablets</div>
+                <div class="dosage">2x Daily (Morning & Evening)</div>
+                <div class="more-instructions">Take with food</div>
               </div>
-              <div class="health-conditions p-5">
-                <div class="d-flex justify-content-between mb-4">
-                  <div class="health-conditions-header">
-                    Previous Health Conditions
-                  </div>
-                  <svg
-                    width="24"
-                    height="24"
-                    fill="none"
-                    class="custom-btn"
-                    data-toggle="modal"
-                    data-target="#health-conditions-modal"
-                  >
-                    <defs />
-                    <path
-                      stroke="#2B2B2B"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M12 20h9M17 4a2 2 0 113 3L7 19l-4 1 1-4L17 4z"
-                    />
-                  </svg>
-                </div>
-                <p class="health-conditions">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                  amet sint. Velit officia consequat duis enim velit mollit.
-                  Exercitation veniam consequat sunt nostrud amet.`
-                </p>
+              <div
+                class="add-prescription-btn custom-btn"
+                data-toggle="modal"
+                data-target="#add-prescription-modal"
+              >
+                add prescription
               </div>
             </div>
-            <div class="more-option-btn d-flex align-items-center mt-5">
-              <div class="message-patient-btn custom-btn mr-5">
-                message patient
+            <div class="condition_doctor-container w-45 mt-5">
+              <div class="condition_doctor-header mb-4">Current Condition</div>
+              <div class="current-condition p-5">
+                <div class="condition-status mb-3">moderate</div>
+                <div class="medical-condition">Diabetes</div>
+                <div class="medical-condition-explanation">
+                  Gestational diabetes is high blood sugar during pregnancy.
+                  Insulin-blocking hormones produced by the placenta cause this
+                  type of diabetes.
+                </div>
+                <div class="medical-condition-symptoms">
+                  <div class="symptoms-header">symptoms</div>
+                  <div class="symptoms-list">
+                    <div class="symptoms">
+                      <span class="mr-3">&#8226;</span> Increased hunger
+                    </div>
+                    <div class="symptoms">
+                      <span class="mr-3">&#8226;</span> Increased hunger
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="prescribe-medication-btn custom-btn">
-                prescribe medication
+              <div
+                class="add-condition-btn custom-btn"
+                data-toggle="modal"
+                data-target="#add-condition-modal"
+              >
+                add condition
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
+    <!--add-prescription-modall -->
+    <div
+      class="modal fade"
+      id="add-prescription-modal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div class="add-prescription-container p-5">
+              <div class="add-prescription-header mb-4">ADD DRUG</div>
+              <div class="drug-name-container mb-4">
+                <input type="text" placeholder="Drug Name" />
+              </div>
+              <div class="drug-type-container mb-4">
+                <select class="custom-select drug-type-select">
+                  <option selected>Drug Type</option>
+                  <option value="tablets">Tablets</option>
+                  <option value="syrup">Syrup</option>
+                  <option value="injection">Injection</option>
+                </select>
+              </div>
+              <div class="duration-container mb-4">
+                <input type="text" placeholder="Duration" />
+              </div>
+              <div class="extra-instruction-container mb-4">
+                <input type="text" placeholder="Extra Instruction" />
+              </div>
+              <div class="d-flex align-items-center add-prescription-btns">
+                <div
+                  class="cancel-btn custom-btn close mr-3"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  cancel
+                </div>
+                <div
+                  class="continue-btn custom-btn close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  Prescribe
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--add-condition-modall -->
+    <div
+      class="modal fade"
+      id="add-condition-modal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div class="add-condition-container p-5">
+              <div class="add-condition-header mb-4">ADD CONDITION</div>
+              <div class="condition-status-container mb-4">
+                <select class="custom-select condition-status-select">
+                  <option selected>Degree of Condition</option>
+                  <option value="moderate">Moderate</option>
+                  <option value="serious">Serious</option>
+                </select>
+              </div>
+              <div class="condition-container mb-4">
+                <input type="text" placeholder="condition" />
+              </div>
+              <div class="condition-description-container mb-4">
+                <input type="text" placeholder="Description" />
+              </div>
+              <div class="d-flex align-items-center add-prescription-btns">
+                <div
+                  class="cancel-btn custom-btn close mr-3"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  cancel
+                </div>
+                <div
+                  class="continue-btn custom-btn close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  Add
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- </div> -->
     <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
